--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==1.1.2
-joblib==0.17.0
-numpy==1.19.2
-pandas==1.1.3
-scikit_learn==1.1.1
-sklearn_features==0.0.2
+Flask
+joblib
+numpy
+pandas
+scikit_learn
+sklearn_features
 gunicorn
